Update and rename index.htm to index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ button:hover {transform: scale(1.1);}
 
 <!-- HERO -->
 <div class="hero">
-    <img src="your-image.jpg" alt="Romantic Image">
+    <img src="image.jpg" alt="Romantic Image">
     <button class="continue-btn" onclick="scrollToLetters()">
         Press me to continue 💌
     </button>
