--- a/index.html
+++ b/index.html
@@ -190,11 +190,14 @@ button:hover {transform: scale(1.1);}
 <!-- PROM PROPOSAL -->
 <div class="proposal">
     <h2>Will You Be My Prom Date? 🌹</h2>
-    <form action="https://formsubmit.co/YOUR_EMAIL_HERE" method="POST">
-        <input type="hidden" name="_subject" value="Prom Proposal Response!">
-        <button type="submit" name="answer" value="YES ❤️" class="yes">YES ❤️</button>
-        <button type="submit" name="answer" value="NO 😢" class="no">NO 😢</button>
-    </form>
+    <h2>by auztine <3 :)</h2>
+<form name="prom-response" method="POST" data-netlify="true">
+  <input type="hidden" name="form-name" value="prom-response">
+
+  <button type="submit" name="answer" value="YES ❤️" class="yes">YES ❤️</button>
+  <button type="submit" name="answer" value="NO 😢" class="no">NO 😢</button>
+</form>
+
 </div>
 
 <script>
