--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Will You Be My Prom Date? 💌</title>
+<title>Be My Prom Date....? 💌</title>
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
 <style>
-/* General Styles */
 body {
     margin:0;
     font-family: 'Quicksand', sans-serif;
@@ -14,7 +13,6 @@ body {
     background: #fff0f5;
 }
 
-/* Floating Hearts */
 .heart {
     position: absolute;
     color: #ff4d6d;
@@ -28,7 +26,6 @@ body {
     100% {transform: translateY(-300px) translateX(-20px);}
 }
 
-/* HERO SECTION */
 .hero {
     height:100vh;
     display:flex;
@@ -66,7 +63,6 @@ body {
 }
 .continue-btn:hover {transform: scale(1.1);}
 
-/* LETTERS SECTION */
 .section {
     padding:50px 20px;
     text-align:center;
@@ -107,7 +103,6 @@ body {
     text-align:left;
 }
 
-/* PROM PROPOSAL */
 .proposal {
     padding:60px 20px;
     text-align:center;
@@ -120,7 +115,6 @@ body {
     color:#ff4d6d;
 }
 
-/* Google Form Embed */
 iframe {
     border:none;
     border-radius:15px;
@@ -128,7 +122,6 @@ iframe {
     max-width:100%;
 }
 
-/* Buttons (not needed now but kept for reference if you use yes/no buttons later) */
 button {
     padding:15px 40px;
     margin:10px;
@@ -146,16 +139,14 @@ button:hover {transform: scale(1.1);}
 </head>
 <body>
 
-<!-- Floating Hearts -->
 <div class="heart" style="left:10%; animation-delay:0s;">❤️</div>
 <div class="heart" style="left:30%; animation-delay:1s;">💖</div>
 <div class="heart" style="left:50%; animation-delay:2s;">💕</div>
 <div class="heart" style="left:70%; animation-delay:3s;">❤️</div>
 <div class="heart" style="left:90%; animation-delay:4s;">💓</div>
 
-<!-- HERO -->
 <div class="hero">
-    <img src="your-image.jpg" alt="Romantic Image">
+    <img src="fl-removebg-preview.png" alt="Romantic Image">
     <button class="continue-btn" onclick="scrollToLetters()">
         Press me to continue 💌
     </button>
@@ -163,32 +154,20 @@ button:hover {transform: scale(1.1);}
 
 <!-- LETTERS SECTION -->
 <div class="section" id="letters">
-    <h2>Open My Letters 💌</h2>
+    <h2>Open My Letter 💌</h2>
     <div class="letters">
         <div class="letter" onclick="openLetter(1)">
-            Letter 1
+            Click Me!
             <div id="content1" class="letter-content">
                 From the first moment we met, I knew there was something special about you. Every smile, every word you say makes my heart beat faster. 💖
             </div>
         </div>
-        <div class="letter" onclick="openLetter(2)">
-            Letter 2
-            <div id="content2" class="letter-content">
-                You make ordinary days feel magical. Your laughter is the song I want to hear forever, and your presence lights up every corner of my world. 🌸✨
-            </div>
-        </div>
-        <div class="letter" onclick="openLetter(3)">
-            Letter 3
-            <div id="content3" class="letter-content">
-                I can’t keep this to myself any longer… I’ve been dreaming of asking you this moment. Will you make me the happiest by going to prom with me? 💍💕
-            </div>
-        </div>
+        
     </div>
 </div>
 
-<!-- PROM PROPOSAL / GOOGLE FORM EMBED -->
 <div class="proposal">
-    <h2>Will You Be My Prom Date? 🌹</h2>
+    <h2>Be My Prom Date.... ? 🌹</h2>
     <h2>auztine :) <3</h2>
 
     <iframe 
