Update proposal section heading and remove text
Removed a line and updated the proposal section heading.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,6 @@ button:hover {transform: scale(1.1);}
     </button>
 </div>
 
-<!-- LETTERS SECTION -->
 <div class="section" id="letters">
     <h2>Open My Letter 💌</h2>
     <div class="letters">
@@ -168,8 +167,6 @@ button:hover {transform: scale(1.1);}
 
 <div class="proposal">
     <h2>Be My Prom Date.... ? 🌹</h2>
-    <h2>auztine :) <3</h2>
-
     <iframe 
         src="https://docs.google.com/forms/d/e/1FAIpQLSehjiNnDjEgWD0MPUQN0LX8RyGhyG6kwMgEhgXbKMO_iRmyIA/viewform?embedded=true" 
         width="100%" 
@@ -178,6 +175,7 @@ button:hover {transform: scale(1.1);}
         marginwidth="0">
         Loading…
     </iframe>
+    <h2> made love by auztine :)</h2>
 </div>
 
 <script>
