--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ button:hover {transform: scale(1.1);}
         marginwidth="0">
         Loading…
     </iframe>
-    <h2> made love by auztine :)</h2>
+    <h2> made with love by auztine :)</h2>
 </div>
 
 <script>
