--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ button:hover {transform: scale(1.1);}
     <h2>Open My Letter 💌</h2>
     <div class="letters">
         <div class="letter" onclick="openLetter(1)">
-            Click Me!
+            Click To Read Me!
             <div id="content1" class="letter-content">
                 Hii Jen! First of all, belated Happy Valentine’s Day! This web was made during Valentine’s Day :) This is a letter of appreciation.
 
