--- a/index.html
+++ b/index.html
@@ -158,11 +158,10 @@ button:hover {transform: scale(1.1);}
         <div class="letter" onclick="openLetter(1)">
             Click To Read Me!
             <div id="content1" class="letter-content">
-                Hii Jen! First of all, belated Happy Valentine’s Day! This web was made during Valentine’s Day :) This is a letter of appreciation.
-
-                First of all, thank you. Thank you for showing up. You are the source of my energy and happiness. Kapag kausap kita, it feels like bumabagal ang mundo. If it’s okay with you… are you going to prom? If yes… how about being my prom date? I’d like to spend prom day with you.
-                
-                And I can’t keep this to myself forever, I’ve been dreaming of asking you this moment. Will you make me the happiest man by answering the G-Form down there? A Yes or No answer will be appreciated by submitting it. Don’t overthink that much. Kapag ang sagot mo ay No, that’s still an effort by answering my question. :) 💖
+                <p>                Hii Jen! First of all, belated Happy Valentine’s Day! This web was made during Valentine’s Day :) This is a letter of appreciation.
+<br>                First of all, thank you. Thank you for showing up. You are the source of my energy and happiness. Kapag kausap kita, it feels like there's thounsands of butterflies on my stomach. If it’s okay with you… are you going to prom? If yes… how about being my prom date? I’d like to spend prom day with you.
+<br>                And I can’t keep this to myself forever, I’ve been dreaming of asking you this moment. Will you make me the happiest man by answering the G-Form down there? A Yes or No answer will be appreciated by submitting it. Don’t overthink that much. Kapag ang sagot mo ay No, that’s still an effort by answering my question. :) 💖
+</p>
             </div>
         </div>
         
