Fix punctuation and phrasing in prom invitation text

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ button:hover {transform: scale(1.1);}
         First of all, thank you. Thank you for showing up. You are the source of my energy and happiness. Kapag kausap kita, it feels like there are thousands of butterflies in my stomach. If it’s okay with you… are you going to prom? If yes… how about being my prom date? I’d like to spend prom day with you.
 
         <br><br>
-        And I can’t keep this to myself forever — I’ve been dreaming of asking you this moment. Will you make me the happiest man by answering the G-Form down there? A Yes or No answer will be appreciated by submitting it. Don’t overthink that much. Kapag ang sagot mo ay No, that’s still an effort in answering my question. :) 💖
+        And I can’t keep this to myself forever, I’ve been dreaming of asking you this moment. Will you make me the happiest man by answering the G-Form down there? A Yes or No answer will be appreciated by submitting it. Don’t overthink that much. Kapag ang sagot mo ay No, that’s still an effort in answering my question. :) 💖
 
         <br><br>
         Answer it before giving it to anyone hehe, so I know that you’re the one who made that answer :) hehehhehhe
